# DSP

./: .gitmodules  CMakeLists.txt
src/: main.cpp
src/classes/Bluprints/: NodeBase.cpp  NodeBase.hpp  Nodes.cpp  Nodes.hpp
src/classes/Parameters/: ParameterBase.hpp  Parameters.hpp
src/classes/Signals/: SignalBase.hpp  Signals.hpp
src/classes/Signals/SignalData/: SignalData.cpp  SignalData.hpp
src/classes/WAVController/: WAVController.cpp  WAVController.hpp
